step3/main.tf
data "terraform_remote_state" "step2" {
  backend = "local"
  config = {
    path = "../step2/terraform.tfstate"  # Path to the state file of step2
  }
}
#vpc
resource "aws_vpc" "madhu_vpc" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "Madhu-terr-vpc"
  }
}
# subnet 1 (public)
resource "aws_subnet" "madhu_subnet1" {
  vpc_id = aws_vpc.madhu_vpc.id
  cidr_block = var.subnet1_cidr
  availability_zone_id = var.subnet1_availability_zone
  map_public_ip_on_launch = true
  tags = {
    Name = "Terr-subnet1"
  }
}
# subnet 2 (public)
resource "aws_subnet" "madhu_subnet2" {
  vpc_id = aws_vpc.madhu_vpc.id
  cidr_block = var.subnet2_cidr
  availability_zone_id = var.subnet2_availability_zone
  map_public_ip_on_launch = true
  tags = {
    Name = "Terr-subnet2"
  }
}
#subnet3(private)
resource "aws_subnet" "madhu_subnet3" {
  vpc_id = aws_vpc.madhu_vpc.id
  cidr_block = var.subnet3_cidr
  availability_zone_id = var.subnet3_availability_zone
  map_public_ip_on_launch = false
  tags = {
    Name = "Terr-subnet3"
  }

}
# internet gateway
resource "aws_internet_gateway" "madhu_igw" {
  vpc_id = aws_vpc.madhu_vpc.id
  tags = {
    Name = "Terr-igw"
  }
}
# route table 1 (for public subnets)
resource "aws_route_table" "madhu_rt_public" {
  vpc_id = aws_vpc.madhu_vpc.id
  tags = {
    Name = "Terr-rt1"
  }
}
#route table 2 (for private subnet)
resource "aws_route_table" "madhu_rt_private" {
  vpc_id = aws_vpc.madhu_vpc.id
  tags = {
    Name = "Terr-rt2"
  }
}
# Associating route table 1 with subnet 1 
resource "aws_route_table_association" "madhu_subnet_rt_association1" {
  subnet_id = aws_subnet.madhu_subnet1.id
  route_table_id = aws_route_table.madhu_rt_public.id
}
# Associating route table 1 with subnet 2
resource "aws_route_table_association" "madhu_subnet_rt_association2" {
  subnet_id = aws_subnet.madhu_subnet2.id
  route_table_id = aws_route_table.madhu_rt_public.id
}
# Associating route table 2 with subnet 3
resource "aws_route_table_association" "madhu_subnet_rt_association3" {
  subnet_id = aws_subnet.madhu_subnet3.id
  route_table_id = aws_route_table.madhu_rt_private.id
}
# Adding the internet gateway route to route table 1
resource "aws_route" "madhu_route1" {
  route_table_id = aws_route_table.madhu_rt_public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.madhu_igw.id
}
# NAT Gateway
resource "aws_nat_gateway" "madhu_nat_gateway" {
  allocation_id = aws_eip.madhu_eip.id
  subnet_id     = aws_subnet.madhu_subnet1.id # Replace with your public subnet ID
}
# Elastic IP for NAT Gateway
resource "aws_eip" "madhu_eip" {
  vpc = true
}
# Modify the route table associated with your private subnet to route traffic through the NAT Gateway
resource "aws_route" "madhu_private_subnet_route" {
  route_table_id         = aws_route_table.madhu_rt_private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.madhu_nat_gateway.id
}
# creating a security group
resource "aws_security_group" "madhu_sg" {
  name = "terr-securitygroup"
  vpc_id = aws_vpc.madhu_vpc.id
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
#Creating a keypair
resource "aws_key_pair" "terraform1_key" {
  key_name   = "terraform1_key"
  public_key = tls_private_key.rsa.public_key_openssh
}
resource "tls_private_key" "rsa" {
  algorithm = "RSA"
  rsa_bits  = 4096
}
resource "local_file" "terraform1_key" {
    content  = tls_private_key.rsa.private_key_pem
    filename = "terraform1_key"
}
# Create EC2 instances
resource "aws_instance" "web_server1" {
  ami           = data.terraform_remote_state.step2.outputs.ami_id
  instance_type = var.instance_type     
  subnet_id     = aws_subnet.madhu_subnet3.id
  key_name      = "terraform1_key" 
  security_groups = [aws_security_group.madhu_sg.id]
  tags = {
    Name = "webserver-private"
  }
}
resource "aws_instance" "web_server2" {
  ami           = data.terraform_remote_state.step2.outputs.ami_id
  instance_type = var.instance_type     
  subnet_id     = aws_subnet.madhu_subnet2.id
  key_name      = "terraform1_key" 
  security_groups = [aws_security_group.madhu_sg.id]
  tags = {
    Name = "webserver-public"
  }
}
resource "aws_lb_target_group" "madhu_tg" {
  name     = "terr-lb"
  port     = 8080
  protocol = "TCP"
  vpc_id   = aws_vpc.madhu_vpc.id
}
resource "aws_lb_target_group_attachment" "lb_attachment1" {
  target_group_arn = aws_lb_target_group.madhu_tg.arn
  target_id        = aws_instance.web_server1.id
  port             = 8080
}
resource "aws_lb_target_group_attachment" "lb_attachment2" {
  target_group_arn = aws_lb_target_group.madhu_tg.arn
  target_id        = aws_instance.web_server2.id
  port             = 8080
}
resource "aws_elb" "madhu_elb" {
  name               ="terr-elb"
  internal           = false
  subnets = [aws_subnet.madhu_subnet1.id, aws_subnet.madhu_subnet3.id]
  security_groups = [aws_security_group.madhu_sg.id]
  listener {
    instance_port     = 8080
    instance_protocol = "tcp"
    lb_port           = 8080
    lb_protocol       = "tcp"
  }
  health_check {
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 3
    target              = "TCP:8080"
    interval            = 30
  }
  instances                   = [aws_instance.web_server1.id, aws_instance.web_server2.id]
  cross_zone_load_balancing   = true
  idle_timeout                = 400
  connection_draining         = true
  connection_draining_timeout = 400
  tags = {
    Name = "CAPSTONE-PRJT"
  }
}
output "lb_dns" {
  value = aws_elb.madhu_elb.dns_name
}
resource "aws_launch_template" "madhu_launch_template" {
  name_prefix   = "terr"
  image_id      =  data.terraform_remote_state.step2.outputs.ami_id
  instance_type = "t2.micro"
}
resource "aws_autoscaling_group" "madhu_asg" {
  vpc_zone_identifier = [aws_subnet.madhu_subnet1.id, aws_subnet.madhu_subnet3.id]
  desired_capacity   = 2
  max_size           = 3
  min_size           = 2
  launch_template {
    id      = aws_launch_template.madhu_launch_template.id
    version = "$Latest"
  }
}
